Don't crash because the list is empty.

Review: 100669
BUG: 266358